# desktop-ai-assistant

./: .env.example  .gitignore  ARCHITECTURE_READING.md  README.md  pyproject.toml
config/: app.yaml  providers.yaml  user_settings.json
config/actions/: explain.yaml  polish.yaml  translate.yaml
config/characters/: default.yaml  gentle.yaml  maid.yaml
config/prompt_injections/: default.yaml
daemon/: pyproject.toml
daemon/assistant_daemon/: __init__.py  assistant_events.py  config.py  main.py  memory.py  prompt_injection.py  prompts.py  providers.py  schemas.py
daemon/desktop_ai_assistant_daemon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
daemon/tests/: test_assistant_events.py  test_config_and_prompts.py  test_providers.py
docs/: mouse-buttons.md
frontend/: .env.example  index.html  live2d.html  package-lock.json  package.json  vite.config.ts
frontend/live2d-electron/: main.js  package-lock.json  package.json  preload.js
frontend/public/: webgl_check.html
frontend/src/: AvatarWindow.tsx  FbxAvatarRenderer.tsx  Live2DAssistant.tsx  Live2DRenderer.tsx  Live2DWindow.tsx  SettingsPanel.tsx  api.ts  avatarRendererTypes.ts  clipboard.ts  live2d_main.tsx  main.tsx  mouseTrigger.ts  shortcuts.ts  styles.css  types.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
skills/liangzi-perspective/: SKILL.md
struct/: architecture.md  todo.md
struct/modules/: config.md  daemon.md  frontend.md  live2d.md  prompt-memory.md  (+2 more)
(+6 files in other folders)
