[project]
name = "desktop-ai-assistant-daemon"
version = "0.1.0"
description = "Local FastAPI daemon for the desktop AI assistant."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2",
  "python-dotenv>=1",
  "pyyaml>=6",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["daemon"]
include = ["assistant_daemon*"]

